kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: sumit202/wisecow:9d81296

        ports:
        - containerPort: 4499

        livenessProbe:
          tcpSocket:
            port: 4499
          initialDelaySeconds: 10
          periodSeconds: 15

        readinessProbe:
          tcpSocket:
            port: 4499
          initialDelaySeconds: 5
          periodSeconds: 10
