kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow

  ports:
  - port: 80
    targetPort: 4499

  type: NodePort
